@@ -4,6 +4,7 @@ Changes in 2.2.3
 * UPD: based on Unicode 6.1.0
 * UPD: experimental systemd service files: always run both afpd and cnid_metad
 * UPD: afpd: Ensure our umask is not altered by eg pam_umask
+* FIX: afpd: sendfile() on FreeBSD was broken, courtesy of Denis Ahrens
 
 Changes in 2.2.2
 ================
